update for lutra dep removal